--- a/media-query.css
+++ b/media-query.css
@@ -11,7 +11,7 @@
     justify-content: center;
     overflow: hidden;
     float: right;
-    background-color: white;
+    background-color: rgba(192, 192, 192, 0.26);
     width: 640px;
     height: 400px;
     border-radius: 18px;
@@ -20,14 +20,21 @@
   }
 
   #imagen {
-    background-color: #5f9ea0;
+    background-color: #000000;
     height: 100%;
     width: 280px;
     display: flex;
     float: left;
     align-items: center;
     justify-content: center;
-  }
+    border-radius: 0px 40px 40px 0px;
+
+    transition: float .6s;
+}
+
+#img {
+  height: 80%;
+}
   
   #formulario {
     display: flex;
@@ -45,7 +52,7 @@
     justify-content: center;
     overflow: hidden;
     float: left;
-    background-color: white;
+    background-color: rgba(192, 192, 192, 0.26);
     width: 880px;
     height: 370px;
     border-radius: 18px;
@@ -54,14 +61,21 @@
   }
 
   #imagen {
-    background-color: #5f9ea0;
+    background-color: #000000;
     height: 100%;
     width: 45%;
     display: flex;
     float: right;
     align-items: center;
     justify-content: center;
+    border-radius: 40px 0px 0px 40px;
+
+    transition: float .6s;
   }
+
+  #img {
+  height: 80%;
+}
 
   #formulario {
     display: flex;
@@ -78,7 +92,7 @@
     justify-content: center;
     overflow: hidden;
     float: left;
-    background-color: white;
+    background-color: rgba(192, 192, 192, 0.26);
     width: 880px;
     height: 400px;
     border-radius: 18px;
@@ -87,14 +101,21 @@
   }
 
   #imagen {
-    background-color: #5f9ea0;
+    background-color: #000000;
     height: 100%;
     width: 50%;
     display: flex;
     float: right;
     align-items: center;
     justify-content: center;
+    border-radius: 40px 0px 0px 40px;
+
+    transition: translate .6s;
   }
+
+  #img {
+  height: 80%;
+}
 
   #formulario {
     display: flex;
