--- a/style.css
+++ b/style.css
@@ -4,9 +4,17 @@
     box-sizing: border-box;
 
 }
+
+
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Henny Penny", system-ui;
+    font-weight: bold;
+    font-style:normal;
     background-color: rgb(150, 170, 170);
+    background: url(imagen/pumpkins-7469975.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     height: 100vh;
     width: 100%;
 }
@@ -23,9 +31,9 @@ main {
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    background-color: white;
-    width: 280px;
-    height: 570px;
+    background-color: rgba(192, 192, 192, 0.26);
+    width: 320px;
+    height: 600px;
     border-radius: 18px;
     box-shadow: 2px 2px 3px 5px rgba(0, 0, 0, 0.082);
     
@@ -34,11 +42,23 @@ main {
 }
 
 #imagen {
-    background-color: #5f9ea0;
+    background-color: #000000;
     height: 240px;
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 0px 0px 40px 40px;
+    cursor: pointer;
+
+    transform: height .7s ease, width .7s ease;
+}
+
+#imagen:hover {
+    background-color: #e27f2e;  
+}
+
+#img {
+  height: 80%;
 }
 
 #formulario {
@@ -47,18 +67,19 @@ main {
     flex-direction: column;
 }
 #formulario > h1 {
+    color: #000000;
     text-align: center;
     margin-bottom: 10px;
 }
 
 #formulario > p {
+    color: #000000;
     font-size: 0.9rem;
     margin-bottom: 10px;
     text-align: center;
 }
 
 #tela-login {
-    
     height: 500px;
     background-color: white;
     width: 300px;
@@ -67,8 +88,8 @@ main {
     
 }
 .campo {
-    background-color: #5f9ea0;
-    border: 2px solid #5f9ea0;
+    background-color: #000000;
+    border: 2px solid #000000;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -81,7 +102,7 @@ main {
 
 #logo {
     font-size: 26px;
-    color:#8e9797;
+    color:#e27f2e;
     align-items: center;
     padding-top: 8px;
     padding-right: 8px;
@@ -94,7 +115,8 @@ main {
 }
 
 .campo > input {
-    background-color: #5f9ea0;
+    font-family: "Henny Penny", system-ui;
+    background-color: #e27f2e;
     height: 100%;
     width: 100%;
     padding-left: 10px;
@@ -106,13 +128,14 @@ main {
 }
 
 .campo > input:hover {
-    background-color: #ffffff;
+    background-color: white;
     height: 100%;
     width: 100%;
 }
 
 #btn {
-    background-color:#5f9ea0;
+    font-family: "Henny Penny", system-ui;
+    background-color:#e27f2e;
     align-items: center;
     justify-self: center;
     height: 44px;
@@ -124,13 +147,13 @@ main {
 }
 
 #btn:hover {
-    color: #ffffff;
-    background-color: #1ea5a5;
+    color: #e27f2e;
+    background-color: #000000;
 }
 
 a {
     display: flex;
-    color: #8e9797;
+    color: #000000;
     text-decoration: none;
     align-items: center;
     justify-content: center;
